--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "acb16e36-eb6a-4908-bbc8-a6d7880f2b13"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
